k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medflow
  labels:
    name: medflow
    security.kubernetes.io/enforce: restricted
