k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: medflow
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: redis
    - port: 26379
      name: sentinel
  selector:
    app: redis
  clusterIP: None # Headless service for Sentinel lookup discovery
